Review DTR storage backend

--- a/datacenter/dtr/2.2/guides/admin/configure/external-storage/s3.md
+++ b/datacenter/dtr/2.2/guides/admin/configure/external-storage/s3.md
@@ -1,55 +1,35 @@
 ---
-description: S3 storage configuration for Docker Trusted Registry
-keywords: docker, dtr, storage driver, s3 storage, s3 compatible
-title: Configuring S3 storage within DTR
+title: Store images on Amazon S3
+description: Learn how to configure Docker Trusted Registry to store Docker images on
+  Amazon S3
+keywords: docker, dtr, storage driver, s3
 ---
 
+You can configure DTR to store Docker images on Amazon S3, or other file servers
+with an S3-compatible API like Minio.
 
-DTR supports AWS S3 to store your images, plus other file servers that have an
-S3 compatible API such as Minio.  Other blobstores that are S3 compatible
-generally use the same terminology, though setup may be slightly different.
+Amazon S3 and compatible services store files in "buckets", and users have
+permissions to read, write, and delete files from those buckets. When you
+integrate DTR with Amazon S3, DTR sends all read and write operations to the
+S3 bucket so that the images are persisted there.
 
-### About S3
+## Create a bucket on Amazon S3
 
-S3 stores data as objects within “buckets” where you read, write, and delete
-objects in that bucket.  All read and write operations will be sent to S3 (or
-your S3-compatible server), ensuring availability and durability of your images.
+Before configuring DTR you need to create a bucket on Amazon S3.
+To get faster pulls and pushes, you should create the S3 bucket on a region
+that's physically close to the servers where DTR is running.
 
-### Configuring S3 itself
+Start by
+[creating a bucket](http://docs.aws.amazon.com/AmazonS3/latest/gsg/CreatingABucket.html).
+Then, as a best practice you should
+[create a new IAM user](http://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_create.html)
+just for the DTR
+integration and apply a IAM policy that ensures the user has limited permissions.
 
-This section deals with creating and configuring bucket policies within AWS; if
-you're using an S3-compatible server you may skip this section.
+This user only needs permissions to access the bucket that you'll use to store
+images, and be able to read, write, and delete files.
 
-Prior to configuring DTR you need to make a "bucket" within S3.  Buckets are
-uniquely named containers in which S3 stores files.
-
-You must:
-
-1. Create a bucket within S3, choosing a region which is closest to your DTR
-2. Note the bucket and region name for configuring DTR
-
-You then need to configure authorization for your bucket.  You can choose to use
-an [access and secret key combination](
-http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html) for
-the entirety of DTR (simple, but potentially less secure) or configure an [IAM
-policy for the bucket and DTR](
-http://docs.aws.amazon.com/AmazonS3/latest/dev/example-policies-s3.html) (more
-complex to configure but also more secure, as access is restricted to only the
-bucket).
-
-If using an access key and secret key you should copy these and begin
-configuring your storage settings within DTR
-
-**Creating an IAM policy for your bucket**
-
-You can set a policy through your AWS console to manage permissions for DTR.
-For more information about setting IAM policies using the command line or the
-console, review the AWS [Overview of IAM Policies](
-http://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies.html) article
-or visit the console Policies page.
-
-The following example describes the minimum permissions set which allows
-Trusted Registry users to access, push, pull, and delete images.
+Here's an example of a policy like that:
 
 ```json
 {
@@ -66,7 +46,7 @@ Trusted Registry users to access, push, pull, and delete images.
                 "s3:ListBucket",
                 "s3:GetBucketLocation"
             ],
-            "Resource": "arn:aws:s3:::<INSERT YOUR BUCKET HERE>"
+            "Resource": "arn:aws:s3:::<bucket-name>"
         },
         {
             "Effect": "Allow",
@@ -75,42 +55,39 @@ Trusted Registry users to access, push, pull, and delete images.
                 "s3:GetObject",
                 "s3:DeleteObject"
             ],
-            "Resource": "arn:aws:s3:::<INSERT YOUR BUCKET HERE>/*"
+            "Resource": "arn:aws:s3:::<bucket-name>/*"
         }
     ]
 }
 
 ```
 
-To set a policy through the AWS command line, save the policy into a file,
-for example `TrustedRegistryUserPerms.json`, and pass it to the
-put-user-policy AWS command:
-
-```
-$ aws iam put-user-policy --user-name MyUser --policy-name TrustedRegistryUserPerms --policy-document file://C:\Temp\TrustedRegistryUserPerms.json
-```
-
-You can also save this policy using the AWS console online.
 
 
-### Configuring your storage settings 
+## Configure DTR
 
-To configure your storage settings you must be a DTR administrator, and you must
-have a bucket created within S3 with the 
+Once you've created a bucket and user, you can configure DTR to use it.
+Navigate to the **DTR web UI**, go to **Settings**, and choose **Storage**.
 
-You first need to create a bucket within Amazon S3
+![](../../../images/s3-1.png){: .with-border}
 
-1. First navigate to the storage settings tab, within "settings"
-2. Choose "S3" from the storage list (even when using an S3-compatible backend):
-   ![](../../../images/s3-1.png){: .with-border}
-3. Fill out the form using your bucket name, region, and optionally access keys.
-   If you're using an IAM policy the secret key and access key can be
-   left blank.  Also, when using an S3-compatible server these are likely your
-   username and password.
-4. If using an S3 compatible server, change the region endpoint to the URL of
-   your server
-5. Within "Advanced Settings" you can choose to use V4 auth and HTTPS.  By
-   default HTTPS is on and V4 auth is off.
+Select the **S3** option, and fill-in the information about the bucket and
+user.
 
-When hitting "Save" DTR validates that it can read and write to your new
-settings and saves them once validated.
+| Field           | Description                                                                                                                                                                                   |
+|:----------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Root directory  | The path in the bucket where images are stored                                                                                                                                                |
+| AWS Region name | The region where the bucket is. [Learn more](http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region)                                                                               |
+| S3 bucket name  | The name of the bucket to store the images                                                                                                                                                    |
+| AWS access key  | The access key to use to access the S3 bucket. This can be left empty if you're using an AIM policy. [Learn more](http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html) |
+| AWS secret key  | The secret key to use to access the S3 bucket. This can be left empty if you're using an AIM policy                                                                                           |
+| Region endpoint | The endpoint name for the region you're using. [Learn more](http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region)                                                                |
+
+There are also some advanced settings.
+
+| Field          | Description                                                                                                                                               |
+|:---------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Version 4 auth | Authenticate the requests using AWS signature version 4. [Learn more](http://docs.aws.amazon.com/AmazonS3/latest/API/sig-v4-authenticating-requests.html) |
+| Use HTTPS      | Secure all requests with HTTPS, or make requests in an insecure way                                                                                       |
+
+Once you click **Save**, DTR validates the configurations and saves the changes.
