Improve the 404 page
- Don't actually change the URL
- Give more choices about what to do in the event of a 404

--- a/404.md
+++ b/404.md
@@ -1,7 +1,9 @@
 ---
-layout: null
-title: 404 Redirector
+title: "Sorry, we can't find that page"
 permalink: /404.html
+noratings: true
+notoc: true
+tree: false
 ---
 
 <script language="JavaScript">
@@ -71,6 +73,8 @@ if (archive==false) {
 
 } // end of check for .md
 } // end of check for archive
+var path = window.location.pathname.replace("#","");
+var phrase = decodeURIComponent(path.replace(/\/+/g, ' ').trim());
 
 if (gonnaFwd) {
   newURL = baseURL + newURL;
@@ -79,8 +83,28 @@ if (gonnaFwd) {
   window.location.href = newURL;
   document.write('<meta http-equiv="refresh" content="0; url=' + newURL + '">')
 } else {
-  window.location.replace("/sorry/#" + forwardingURL);
-  window.location.href = "/sorry/#" + forwardingURL;
-  document.write('<meta http-equiv="refresh" content="0; url=/sorry/#' + forwardingURL + '">')
+  function populateTicket()
+  {
+    var searchVal = phrase;
+    var output = new Array();
+    output.push("<ul><li><a href='https://github.com/docker/docker.github.io/issues/new?title=404 at: ");
+    output.push(path);
+    output.push("&body=URL: ");
+    output.push(path);
+    output.push("' class='nomunge'>File a ticket</a></li>");
+    output.push("<li><a href='/search/?q=" + phrase + "'</a>Search for <tt>&quot;" + phrase + "&quot;</tt></a></li>");
+    output.push("<li><a href='/search/'>Try a different search</a></li>");
+    output.push("<li><a href='/'>Go to the index</a></li></ul><br />");
+    document.getElementById("sorryMsg").innerHTML = output.join("");
+  }
+  window.onload = populateTicket;
 }
 </script>
+
+<br/>
+
+We tried to forward you to where we think you might be going, but we couldn't
+find a good match. You've got some choices:
+
+<span id="sorryMsg" />
+
