--- a/404.md
+++ b/404.md
@@ -6,6 +6,14 @@ notoc: true
 tree: false
 ---
 
+<br/>
+
+We tried to forward you to where we think you might be going, but we couldn't
+find a good match. You've got some choices:
+
+<div id="sorryMsg" />
+
+<!-- Script needs to be at the bottom, after any content -->
 <script language="JavaScript">
 var forwardingURL=window.location.pathname;
 if (forwardingURL.charAt(forwardingURL.length - 1) != "/") forwardingURL += "/";
@@ -26,7 +34,7 @@ if (forwardingURL.indexOf(".md") > -1)
 {% for item in site.data.docsarchive.docker-compose %}
   if (forwardingURL == "/{{ item[0] }}/")
   {
-    console.log("Found via Docker Compose file for Acrhive")
+    console.log("Found via Docker Compose file for Archive")
     gonnaFwd = true;
     archive = true;
     // make it so redirects cascade; first, use the base URL, then append path
@@ -83,28 +91,13 @@ if (gonnaFwd) {
   window.location.href = newURL;
   document.write('<meta http-equiv="refresh" content="0; url=' + newURL + '">')
 } else {
-  function populateTicket()
-  {
-    var searchVal = phrase;
-    var output = new Array();
-    output.push("<ul><li><a href='https://github.com/docker/docker.github.io/issues/new?title=404 at: ");
-    output.push(path);
-    output.push("&body=URL: ");
-    output.push(path);
-    output.push("' class='nomunge'>File a ticket</a></li>");
-    output.push("<li><a href='/search/?q=" + phrase + "'</a>Search for <tt>&quot;" + phrase + "&quot;</tt></a></li>");
-    output.push("<li><a href='/search/'>Try a different search</a></li>");
-    output.push("<li><a href='/'>Go to the index</a></li></ul><br />");
-    document.getElementById("sorryMsg").innerHTML = output.join("");
-  }
-  window.onload = populateTicket;
+  console.log("Showing 404 choices");
+  var searchVal = phrase;
+  var output = new Array();
+  output.push("<ul><li><a href='https://github.com/docker/docker.github.io/issues/new?title=404 at: " + path + "&body=URL: " + path + "' class='nomunge'>File a ticket</a></li>");
+  output.push("<li><a href='/search/?q=" + phrase + "'</a>Search for <tt>&quot;" + phrase + "&quot;</tt></a></li>");
+  output.push("<li><a href='/search/'>Try a different search</a></li>");
+  output.push("<li><a href='/'>Go to the index</a></li></ul>");
+  document.getElementById('sorryMsg').innerHTML = output.join("");
 }
 </script>
-
-<br/>
-
-We tried to forward you to where we think you might be going, but we couldn't
-find a good match. You've got some choices:
-
-<span id="sorryMsg" />
-
