--- a/404.md
+++ b/404.md
@@ -11,7 +11,7 @@ tree: false
 We tried to forward you to where we think you might be going, but we couldn't
 find a good match. You've got some choices:
 
-<div id="sorryMsg" />
+<div id="sorryMsg"></div>
 
 <!-- Script needs to be at the bottom, after any content -->
 <script language="JavaScript">
@@ -34,7 +34,7 @@ if (forwardingURL.indexOf(".md") > -1)
 {% for item in site.data.docsarchive.docker-compose %}
   if (forwardingURL == "/{{ item[0] }}/")
   {
-    console.log("Found via Docker Compose file for Archive")
+    console.log("Found via Docker Compose file for Archive");
     gonnaFwd = true;
     archive = true;
     // make it so redirects cascade; first, use the base URL, then append path
@@ -63,7 +63,7 @@ if (archive==false) {
     {
       if (forwardingURL == aliases[i])
       {
-        console.log("Found via Page Aliases on a multi-alias page @", "{{ page.url }}", aliases[i])
+        console.log("Found via Page Aliases on a multi-alias page @", "{{ page.url }}", aliases[i]);
         gonnaFwd = true;
         newURL = "{{ page.url }}";
       }
@@ -72,7 +72,7 @@ if (archive==false) {
     // only one alias for this page.
     if (forwardingURL == aliases)
     {
-      console.log("Found via Page Aliases on a single-alias page @", forwardingURL.indexOf(aliases[i]), aliases[i])
+      console.log("Found via Page Aliases on a single-alias page @", forwardingURL.indexOf(aliases[i]), aliases[i]);
       gonnaFwd = true;
       newURL = "{{ page.url }}";
     }
@@ -92,9 +92,9 @@ if (gonnaFwd) {
   document.write('<meta http-equiv="refresh" content="0; url=' + newURL + '">')
 } else {
   console.log("Showing 404 choices");
-  var searchVal = phrase;
+  var ghIssueQueryString = "title=404%20at%20" + path + "&body=URL%3A%20" + path;
   var output = new Array();
-  output.push("<ul><li><a href='https://github.com/docker/docker.github.io/issues/new?title=404 at: " + path + "&body=URL: " + path + "' class='nomunge'>File a ticket</a></li>");
+  output.push("<ul><li><a href='https://github.com/docker/docker.github.io/issues/new?" + ghIssueQueryString + "' class='nomunge'>File a ticket</a></li>");
   output.push("<li><a href='/search/?q=" + phrase + "'</a>Search for <tt>&quot;" + phrase + "&quot;</tt></a></li>");
   output.push("<li><a href='/search/'>Try a different search</a></li>");
   output.push("<li><a href='/'>Go to the index</a></li></ul>");
