--- a/404.md
+++ b/404.md
@@ -68,7 +68,7 @@ if (gonnaFwd) {
   console.log("Showing 404 choices");
   var ghIssueQueryString = "title=404%20at%20" + path + "&body=URL%3A%20" + path;
   var output = new Array();
-  output.push("<ul><li><a href='https://github.com/moby/moby.github.io/issues/new?" + ghIssueQueryString + "' class='nomunge'>File a ticket</a></li>");
+  output.push("<ul><li><a href='https://github.com/docker/docker.github.io/issues/new?" + ghIssueQueryString + "' class='nomunge'>File a ticket</a></li>");
   output.push("<li><a href='/search/?q=" + phrase + "'</a>Search for <tt>&quot;" + phrase + "&quot;</tt></a></li>");
   output.push("<li><a href='/search/'>Try a different search</a></li>");
   output.push("<li><a href='/'>Go to the index</a></li></ul>");
