--- a/datacenter/dtr/2.2/guides/admin/configure/external-storage/s3.md
+++ b/datacenter/dtr/2.2/guides/admin/configure/external-storage/s3.md
@@ -79,8 +79,8 @@ user.
 | Root directory  | The path in the bucket where images are stored                                                                                                                                                |
 | AWS Region name | The region where the bucket is. [Learn more](http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region)                                                                               |
 | S3 bucket name  | The name of the bucket to store the images                                                                                                                                                    |
-| AWS access key  | The access key to use to access the S3 bucket. This can be left empty if you're using an AIM policy. [Learn more](http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html) |
-| AWS secret key  | The secret key to use to access the S3 bucket. This can be left empty if you're using an AIM policy                                                                                           |
+| AWS access key  | The access key to use to access the S3 bucket. This can be left empty if you're using an IAM policy. [Learn more](http://docs.aws.amazon.com/general/latest/gr/managing-aws-access-keys.html) |
+| AWS secret key  | The secret key to use to access the S3 bucket. This can be left empty if you're using an IAM policy                                                                                           |
 | Region endpoint | The endpoint name for the region you're using. [Learn more](http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region)                                                                |
 
 There are also some advanced settings.
